# QCNN-Brain-Tumors

./: .gitignore  QCNN-Brain-Tumors.sln  QCNN.py  QCNN_Brain_Tumors.py  README.md  gba.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  svd.py
